# operator

./: .gitignore  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md  v2.2-MILESTONE-AUDIT.md  v2.2-REQUIREMENTS.md  v2.2-ROADMAP.md  v2.3-ROADMAP.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v3.1-REQUIREMENTS.md  v3.1-ROADMAP.md  v3.2-MILESTONE-AUDIT.md  v3.2-REQUIREMENTS.md  v3.2-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-tikv-subject/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-local-cluster/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-monitor-loop/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-ai-diagnosis/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-03-SUMMARY.md  05-04-SUMMARY.md  05-CONTEXT.md  05-VERIFICATION.md
.planning/phases/06-chaos-demo/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-tui-foundation/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-subprocess-management/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-RESEARCH.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES-INFRASTRUCTURE.md  FEATURES-RATELIMITER.md  FEATURES.md  PITFALLS-ACTION-EXECUTION.md  PITFALLS-INFRASTRUCTURE.md  PITFALLS.md  STACK-RATELIMITER.md  STACK.md  SUMMARY.md
demo/: __init__.py  __main__.py  ratelimiter.py  ratelimiter_chaos.py  ratelimiter_health.py  runner.py  status.py  tikv.py  tikv_chaos.py  tikv_health.py  tui_integration.py  types.py
demo/tui/: __init__.py  buffer.py  keyboard.py  layout.py  subprocess.py
docker/: .env.example  docker-compose.yml
docker/agent/: Dockerfile  docker-compose.yml
docker/loadgen/: Dockerfile  loadgen.py
eval/: pyproject.toml
eval/src/eval/: __init__.py  cli.py  types.py  variants.py
eval/src/eval/analysis/: __init__.py  commands.py  comparison.py  scoring.py  types.py
eval/src/eval/runner/: __init__.py  campaign.py  db.py  harness.py  operator.py
eval/src/eval/subjects/: __init__.py
eval/src/eval/subjects/tikv/: __init__.py  chaos.py  subject.py
eval/src/eval/viewer/: __init__.py  app.py  routes.py
eval/src/eval/viewer/templates/: base.html  campaign.html  campaigns.html  trial.html
eval/variants/: default.yaml
scripts/: demo.sh  run-demo.sh  run-tui.sh  test-demo-flow.py  test-tui-demo.py  tui_main.py  verify-phase5.sh
subjects/ratelimiter/observer/: pyproject.toml
subjects/ratelimiter/observer/src/ratelimiter_observer/: __init__.py  factory.py  invariants.py  prom_client.py  ratelimiter_client.py  redis_client.py  subject.py
subjects/ratelimiter/observer/tests/: __init__.py  test_invariants.py  test_protocol_compliance.py  test_subject.py
subjects/tikv/: Dockerfile.operator  Dockerfile.ycsb  docker-compose.yaml
subjects/tikv/observer/: pyproject.toml
subjects/tikv/observer/src/tikv_observer/: __init__.py  factory.py  invariants.py  log_parser.py  pd_client.py  prom_client.py  subject.py  types.py
subjects/tikv/observer/tests/: __init__.py  test_invariants.py  test_log_parser.py  test_pd_client.py  test_prom_client.py  test_protocol_compliance.py
(+234 files in other folders)
