[project]
name = "operator"
version = "0.1.0"
description = "AI-powered operator for distributed systems"
requires-python = ">=3.11"
dependencies = [
    "operator-core",
    "operator-tikv",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
operator-core = { workspace = true }
operator-protocols = { workspace = true }
operator-tikv = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages"]
asyncio_mode = "auto"
