[project]
name = "operator"
version = "0.1.0"
description = "AI-powered operator for distributed systems"
requires-python = ">=3.11"
dependencies = [
    "operator-core",
    "operator-tikv",
    "operator-ratelimiter",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
operator-core = { workspace = true }
operator-protocols = { workspace = true }
operator-tikv = { workspace = true }
operator-ratelimiter = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages"]
asyncio_mode = "auto"
