[project]
name = "eval"
version = "0.1.0"
description = "Evaluation harness for chaos engineering trials"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "python-on-whales>=0.70.0",
    "typer>=0.21.0",
    "rich>=14.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.32.0",
    "pyyaml>=6.0",
]

[project.scripts]
eval = "eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eval"]
