[project]
name = "ratelimiter-observer"
version = "0.1.0"
description = "Rate Limiter subject implementation for the AI-powered operator"
requires-python = ">=3.11"
dependencies = [
    "operator-core",
    "operator-protocols",
    "httpx>=0.27.0",
    "redis>=7.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ratelimiter_observer"]
