[project]
name = "tikv-observer"
version = "0.1.0"
description = "TiKV subject implementation for the AI-powered operator"
requires-python = ">=3.11"
dependencies = [
    "operator-core",
    "operator-protocols",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tikv_observer"]
